# bazel-integration

./: BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go
pkg/company/: BUILD.bazel  insert.go
pkg/design/: BUILD.bazel  design.proto
