load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "design_proto",
    srcs = ["design.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "design_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/b-entangled/bazel-integration/pkg/design",
    proto = ":design_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "design",
    embed = [":design_go_proto"],
    importpath = "github.com/b-entangled/bazel-integration/pkg/design",
    visibility = ["//visibility:public"],
)
